# lisp

./: Cargo.toml
src/: environment.rs  eval.rs  main.rs
src/core/: conditional.rs  data.rs  io.rs  math.rs  mod.rs  special.rs
src/value/: functions.rs  mod.rs
